# solar-twin

./: .gitignore  CITATION.cff  EDITOR_HANDOFF_ADDENDUM.md  LICENSE  PAPER_FINDINGS_REPORT.md  README.md  REPRODUCE.md  pyproject.toml
config/: sites.example.yaml  sweep.example.yaml
data/synthetic_lux/: README.md  lux_Location_A.csv  lux_Location_B.csv  lux_Location_C.csv  lux_Location_D.csv  lux_Location_E.csv  lux_Location_F.csv  lux_Location_G.csv  lux_Location_H.csv  lux_Location_I.csv  lux_Location_J.csv  lux_Location_Thessaloniki.csv  lux_Location_Thissio.csv  lux_ghi_monolithic.csv
docs/: thissio_pixel_picking_guide.md
scripts/: ablation_report.py  benchmark_convergence_gui_v2.py  build_dataset.py  diagnose_site.py  export_physical_model.py  extract_geometry_gui.py  find_time_offset.py  live_check_script_editor.py  loo_validation.py  luminous_efficacy.py  make_j_occlusion_figure.py  make_paper_figures.py  make_schedule.py  pick_roof_pixel.py  production_sweep_gui.py  pyranometer_validation.py  read_pyranometer.py  read_pyranometer_lap.py  render_lux_map_gui.py  scene_complexity_gui.py  select_clear_days.py  set_environment_time.py  validate_site.py  validate_thissio.py
scripts/deprecated/: README.md  benchmark_convergence_gui.py  diag_add_light.py  diag_intensity.py  diag_sun_intensity.py  inspect_and_test_sun.py  live_illuminance_check.py  measure_convergence.py  probe_illuminance_aov.py  production_sweep.py  (+2 more)
tests/: test_calibrate.py  test_dataset.py  test_ephemeris.py  test_export_ghimodel.py  test_io_cams.py  test_lux_io.py  test_smoke.py
(+11 files in other folders)
